--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
-language: generic
-dist: trusty
-sudo: required
+language: bash
 addons:
   apt:
+    sources:
+    - debian-sid    # Grab ShellCheck from the Debian repo
     packages:
-      - cabal-install
-      - ghc
-
-node_js:
-- '8'
+    - shellcheck
 
 before_install:
   - $SHELL --version 2> /dev/null || dpkg -s $SHELL 2> /dev/null || which $SHELL
