--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,8 @@ language: node_js
 node_js:
 - 8
 
+before_install:
+  - echo “//registry.npmjs.org/:_authToken=\${NPM_TOKEN}” >> .npmrc
+
 script:
-  npm run release
+  - npm run release
