--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - 8
 
 before_install:
-  - echo “//registry.npmjs.org/:_authToken=\${NPM_TOKEN}” >> .npmrc
+  - echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
 
 script:
   - npm run release
