--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oddish",
-  "version": "1.1.0-20171205.181549",
+  "version": "1.1.0-20171205.182533.a514637",
   "description": "scripts that make your life easier",
   "bin": {
     "oddish": "./scripts/publish.js"
