--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "release": "node ./scripts/publish.js",
-    "test": "echo 'PROFIT!!!'"
+    "release": "npm run build && node ./scripts/publish.js",
+    "test": "npm run build && echo 'PROFIT!!!'"
   },
   "repository": {
     "type": "git",
